Fix MovieInfo layout breaking within small range of viewport sizes

--- a/src/components/MovieInfo/MovieInfo.module.scss
+++ b/src/components/MovieInfo/MovieInfo.module.scss
@@ -18,18 +18,25 @@
     font-size: 1.125rem;
     color: #ffffff;
   }
+
   h3 {
     padding-top: 1rem;
   }
 
-  p {
-    margin-top: 0.25rem;
-    display: flex;
-    align-items: center;
+  .key-info {
+    white-space: nowrap;
   }
+
+  p {
+    // display: flex;
+    // align-items: center;
+    margin-top: 0.25rem;
+  }
+
   .star-icon {
     color: v.$tertiary-color;
-    margin-left: 4px;
+    transform: translateY(2px);
+    // margin-left: 4px;
     margin-right: 2px;
   }
 }
